// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctlty render ExpensesSummary with mutiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     expenses totalling 
    $0.00
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with mutiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     expenses totalling 
    $0.00
  </h1>
</div>
`;
